# rtls-link-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
crates/rtls-link-cli/: Cargo.toml
crates/rtls-link-cli/src/: cli.rs  error.rs  main.rs  types.rs
crates/rtls-link-cli/src/commands/: anchor_telemetry.rs  bulk.rs  calibrate.rs  cmd.rs  config.rs  discover.rs  logs.rs  mod.rs  ota.rs  preset.rs  status.rs
crates/rtls-link-cli/src/device/: discovery.rs  mod.rs
crates/rtls-link-cli/src/health/: mod.rs  status.rs
crates/rtls-link-cli/src/output/: json.rs  mod.rs  table.rs
crates/rtls-link-cli/src/protocol/: mod.rs
crates/rtls-link-cli/src/storage/: mod.rs
crates/rtls-link-core/: Cargo.toml  build.rs
crates/rtls-link-core/mavlink/message_definitions/: rtlslink.xml
crates/rtls-link-core/src/: ardupilot.rs  calibration.rs  error.rs  health.rs  lib.rs  types.rs
crates/rtls-link-core/src/device/: mavlink.rs  mod.rs  ota.rs  websocket.rs
crates/rtls-link-core/src/discovery/: heartbeat.rs  mod.rs  service.rs
crates/rtls-link-core/src/mavlink/: mod.rs  params.rs
crates/rtls-link-core/src/protocol/: binary.rs  commands.rs  config_params.rs  mod.rs  response.rs
crates/rtls-link-core/src/storage/: config.rs  mod.rs  preset.rs
docs/: REVIEW_GUIDE.md
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/routes/: configs.ts  devices.ts
server/src/services/: discovery.ts  localConfigs.ts
shared/: anchors.ts  commands.ts  config.ts  configParams.ts  mavlink.ts  types.ts
shared/tests/: commands.test.ts  config.test.ts  configParams.test.ts  healthStatus.test.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: configs.rs  device_comm.rs  devices.rs  logging.rs  mod.rs  presets.rs
src-tauri/src/config_storage/: mod.rs  service.rs
src-tauri/src/discovery/: mod.rs  service.rs
src-tauri/src/logging/: mod.rs  service.rs
src-tauri/src/preset_storage/: mod.rs  service.rs
src/components/Anchors/: AnchorCard.module.css  AnchorCard.tsx  AnchorsPanel.module.css  AnchorsPanel.tsx  index.ts
src/components/ArduPilotUpdate/: ArduPilotUpdatePanel.module.css  ArduPilotUpdatePanel.tsx  index.ts
src/components/ConfigModal/: ConfigModal.module.css  ConfigModal.tsx
src/components/ConfigPanel/: AnchorListEditor.module.css  AnchorListEditor.tsx  ConfigEditor.module.css  ConfigEditor.tsx  ConfigPanel.tsx
src/components/Controls/: BulkActions.tsx
src/components/DeviceGrid/: DeviceCard.tsx  DeviceGrid.tsx
src/components/ExpertMode/: LogTerminal.module.css  LogTerminal.tsx  index.ts
src/components/FirmwareUpdate/: FirmwareUpdate.module.css  FirmwareUpdate.tsx  index.ts
src/components/Layout/: AppShell.tsx  Header.tsx  Layout.module.css  Sidebar.tsx  index.ts
src/components/LocalConfigs/: LocalConfigPanel.tsx
src/components/Presets/: PresetsPanel.module.css  PresetsPanel.tsx  index.ts
src/components/SystemConfig/: LayoutSelector.tsx  LayoutVisualization.tsx  SystemConfig.module.css  index.ts
src/components/Tags/: TagCard.module.css  TagCard.tsx  TagsPanel.module.css  TagsPanel.tsx  index.ts
src/components/common/: HealthBadge.module.css  HealthBadge.tsx  ProgressBar.tsx  StatusBadge.tsx
src/hooks/: useDeviceCommand.ts  useDeviceWebSocket.ts  useSettings.ts
src/lib/: deviceCommands.ts  healthStatus.ts  tauri-api.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx
(+27 files in other folders)
