[package]
name = "rtls-link-manager"
version = "0.1.0"
description = "Desktop application for managing RTLS-Link UWB devices"
authors = ["RTLS Team"]
edition = "2021"

[lib]
name = "rtls_link_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rtls-link-core = { path = "../crates/rtls-link-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
