[package]
name = "rtls-link-cli"
version = "0.1.0"
edition = "2021"
authors = ["RTLS-Link Team"]
description = "Command-line interface for RTLS-Link device management"
license = "MIT"

[dependencies]
rtls-link-core = { path = "../rtls-link-core" }

# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "fs", "io-util", "signal"] }

# UDP socket with reuse options (for log streaming)
socket2 = { version = "0.5", features = ["all"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Table formatting
comfy-table = "7"
colored = "2"

# Progress bars
indicatif = "0.17"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Pattern matching (for log tag filtering)
regex = "1"

[[bin]]
name = "rtls-link-cli"
path = "src/main.rs"
