[package]
name = "rtls-link-core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for RTLS-Link device management"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["net", "time", "sync", "macros", "fs", "io-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["multipart", "stream", "rustls-tls"] }
socket2 = { version = "0.5", features = ["all"] }
regex = "1"
directories = "5"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "time", "sync"] }
tempfile = "3"
